test/compare/testdata/fixedbugs/issue330.sgo
// errorcheck

func F() {}

func F() {} // ERROR "F already declared in script"

var F = "hello" // ERROR "F redeclared in this block"

var G = 10 ; func G() {} // ERROR "G already declared in script"

